# EndoScopeConsole

./: CMakeLists.txt  README.md  SuperBuild.cmake  qSlicerEndoscopeConsoleModule.cxx  qSlicerEndoscopeConsoleModule.h  qSlicerEndoscopeConsoleModuleWidget.cxx  qSlicerEndoscopeConsoleModuleWidget.h
Logic/: vtkSlicerEndoscopeConsoleLogic.cxx  vtkSlicerEndoscopeConsoleLogic.h
Resources/: qSlicerEndoscopeConsoleModule.qrc
Resources/UI/: qSlicerEndoscopeConsoleFooBarWidget.ui  qSlicerEndoscopeConsoleModuleWidget.ui
SuperBuild/: External_OpenCV.cmake
Widgets/: qSlicerEndoscopeConsoleFooBarWidget.cxx  qSlicerEndoscopeConsoleFooBarWidget.h
